namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms-app
  labels:
    name: cms-app
    app: django-cms
