ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-cms-ingress
  namespace: cms-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
spec:
  rules:
  - host: cms-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-cms-service
            port:
              number: 8000
